# pl-constitution-ai

./: .gitignore  README.md  list_models.py  main.py  pyproject.toml
data/processed/: constitution_chunks.json
data/raw/: Rozdział_III_ŹRÓDŁA_PRAWA.html  Rozdział_II_WOLNOŚCI_PRAWA_I_OBOWIĄZKI_CZŁOWIEKA_I_OBYWATELA.html  Rozdział_IV_SEJM_I_SENAT.html  Rozdział_IX_ORGANY_KONTROLI_PAŃSTWOWEJ_I_OCHRONY_PRAWA.html  Rozdział_I_RZECZPOSPOLITA.html  Rozdział_VIII_SĄDY_I_TRYBUNAŁY.html  Rozdział_VII_SAMORZĄD_TERYTORIALNY.html  Rozdział_VI_RADA_MINISTRÓW_I_ADMINISTRACJA_RZĄDOWA.html  Rozdział_V_PREZYDENT_RZECZYPOSPOLITEJ_POLSKIEJ.html  Rozdział_XIII_PRZEPISY_PRZEJŚCIOWE_I_KOŃCOWE.html  Rozdział_XII_ZMIANA_KONSTYTUCJI.html  Rozdział_XI_STANY_NADZWYCZAJNE.html  Rozdział_X_FINANSE_PUBLICZNE.html  main_page.html
src/api/: main.py
src/application/: indexer.py  query_engine.py
src/domain/: interfaces.py  models.py
src/infrastructure/embeddings/: gemini_embedder.py
src/infrastructure/llm/: gemini_llm.py  tag_generator.py
src/infrastructure/loaders/: constitution_loader.py  constitution_scraper.py
src/infrastructure/vector_store/: chroma_store.py
tests/: test_gemini.py  test_indexer_service.py  test_query_engine.py
web/: index.html
