[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "google-genai>=1.75.0",
    "huggingface-hub>=1.14.0",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "uvicorn>=0.46.0",
]
